--- a/04-deployment/web-services/Pipfile
+++ b/04-deployment/web-services/Pipfile
@@ -6,8 +6,10 @@ name = "pypi"
 [packages]
 scikit-learn = "==1.2.2"
 flask = "==2.2.5"
+gunicorn = "*"
 
 [dev-packages]
+requests = "*"
 
 [requires]
 python_version = "3.11"
